# chess-starting-position

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  index.html  style.css
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
assets/pieces/: README.md
docs/: architecture.md
src/: app.rs  main.rs  pieces.rs  state.rs  theme.rs
src/components/: alphabet.rs  board.rs  board_actions.rs  constraint_editor.rs  constraint_view.rs  mod.rs  orientation.rs  output.rs  presets.rs  sp_id.rs
