[package]
name = "chess-starting-position"
version = "0.1.0"
edition = "2021"
description = "Web UI for the chess-startpos-rs library"
license = "MIT"
repository = "https://github.com/ywzvennu/chess-starting-position"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
chess-startpos-rs = { version = "0.1", features = ["serde"] }
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "Element", "Navigator", "Clipboard", "History", "Location"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Optimise dependencies fully even in dev builds so the WASM bundle is small
# enough for the browser to instantiate. Our own crate stays at opt-level = 0
# for fast incremental rebuilds.
[profile.dev.package."*"]
opt-level = 3
